generated_deploy/osd-token-refresher/01-token-refresher.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/name: token-refresher
    app.kubernetes.io/version: master-2021-02-24-1e01b9c
  name: token-refresher
  namespace: openshift-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: authentication-proxy
      app.kubernetes.io/name: token-refresher
  template:
    metadata:
      labels:
        app.kubernetes.io/component: authentication-proxy
        app.kubernetes.io/name: token-refresher
        app.kubernetes.io/version: master-2021-02-24-1e01b9c
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/infra
                operator: Exists
            weight: 1
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/infra
          operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          items:
            - key: ca-bundle.crt
              path: ca-certificates.crt
          name: token-refresher-trusted-ca-bundle
        name: token-refresher-trusted-ca-bundle
      containers:
      - args:
        - --oidc.audience=observatorium-telemeter
        - --oidc.client-id=$(CLIENT_ID)
        - --oidc.client-secret=$(CLIENT_SECRET)
        - --oidc.issuer-url=$(ISSUER_URL)
        - --url=$(RECEIVER_URL)
        image: quay.io/observatorium/token-refresher@sha256:9225afc5c75cd584f939afc175e86d70ed93c9e308dfd7ffc20932725bf573cd
        name: token-refresher
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /etc/ssl/certs/
          name: token-refresher-trusted-ca-bundle
          readOnly: true
